# youtube-brain

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: LEARNINGS.md
docs/plans/: 2026-06-02-youtube-brain-design.md  2026-06-02-youtube-brain-implementation.md  2026-06-26-category-web-interface-design.md  2026-06-26-category-web-interface-plan.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  index.css
frontend/src/components/: AskPanel.tsx  BrainCard.tsx  BrainDetail.tsx  BrainList.tsx  CategoryGrid.tsx  CategoryPage.tsx  CitationList.tsx  IngestDialog.tsx  IntelligencePanel.tsx  PullCard.tsx
scripts/: backfill_channel_ids.py  backfill_embeddings.py  backfill_published_dates.py  build_editorial_report.py  build_observation_report.py  cleanup_brains.py  cluster_observations.py  dump_transcripts.py  extract_observations.py  ingest_backcatalog.py  load_new_observations.py  probe_burst.py  probe_quota.py  seed_categories.py  skill_bridge.py  smoke_gemini.py
skills/youtube-brain/: SKILL.md
src/youtube_brain/: categories.py  cli.py  embed.py
src/youtube_brain/api/: app.py  routes.py
tests/: conftest.py  test_answer.py  test_api.py  test_categories.py  test_chunker.py  test_crosscreator.py  test_database.py  test_e2e.py  test_editorial.py  test_embed.py  test_gemini.py  test_lint.py  test_models.py  test_observations.py  test_outliers.py  test_pipeline.py  test_refresh.py  test_resolver.py  test_retrieval.py  test_scheduler.py  test_storage.py  test_timeline.py  test_transcripts.py
(+36 files in other folders)
