[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-brain"
version = "0.1.0"
description = "Turn YouTube channels into searchable advisors"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20.0",
    "youtube-transcript-api>=0.6.0",
    "yt-dlp>=2024.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx[http2]>=0.27.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
]

[project.scripts]
ytbrain = "youtube_brain.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: requires API keys and network"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
